# metapath-counts

./: .gitignore  CLAUDE.md  LICENSE  README.md  bench_targetcentric.sh  prebuild.sh  pyproject.toml  rerun_grouping.sh  run_analysis.sh
config/: type_expansion.yaml
docs/: DAG_COMPRESSION_PLAN.md  DIAGONAL_ZEROING.md  HIERARCHICAL_TYPES_PLAN.md  IMPLEMENTATION_PLAN.md  PASSB_PERF_NOTES.md  PHASE2_IMPLEMENTATION.md  README.md  SOUFFLE_PASSB_PLAN.md  WORKFLOW.md  fix_same_type_path_counting.md  optimization_notes.md
scripts/: analyze_3hop_overlap.py  analyze_direction_performance.py  analyze_hop_overlap.py  build_dags_feb13.sh  check_passb_accounting.sh  estimate_total_runtime.py  extract_symmetric_predicates.py  generate_benchmark_samples.py  generate_test_data.py  group_by_onehop.py  group_single_onehop.sh  group_single_onehop_worker.py  interrogate_graph.py  merge_multihop_shard_outputs.sh  merge_results.py  orchestrate_3hop_analysis.py  orchestrate_grouping.py  orchestrate_hop_analysis.py  path_tracker.py  prebuild_matrices.py  prepare_analysis.py  prepare_grouping.py  profile_predictor_traversal.py  run_benchmark_samples.py  run_single_matrix1.sh  slurm_utils.py  submit_multihop_shard_jobs.sh  test_symmetric.py  trace_predictor_pruning.py  visualize_golden_graph.py
tests/: test_aggregation.py  test_aggregation_counts.py  test_aggregation_module.py  test_analyze_3hop_overlap.py  test_build_matrices_hierarchical.py  test_canonical_variant_state.py  test_dag_builders.py  test_group_by_onehop.py  test_grouping_explicit_shards.py  test_hierarchy.py  test_integration.py  (+9 more)
(+43 files in other folders)
