[project]
name = "metapath-counts"
version = "0.1.0"
description = "Parallel 3-hop metapath analysis for biolink knowledge graphs"
requires-python = ">=3.12"
dependencies = [
    "bmt>=1.4.6",
    "python-graphblas>=2025.2.0",
    "psutil>=7.1.1",
    "zstandard>=0.22.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/metapath_counts"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
